Add welcome message to homepage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Cute Dogs</title>
+</head>
+<body>
+<h1>Welcome to my Cute Dogs Site!</h1>
+<h2>For all of your cute dog needs</h2>
+<p>Here, you'll find pictures of cute dogs, cute dog name inspiration, and <b>most importantly</b> a table that provides information on my cute pet dogs (including their names and ages)!</p>
+<nav>
+	
+</nav>
+
+</body>
+</html>
