--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 <h1>Welcome to my Cute Dogs Site!</h1>
 <h2>For all of your cute dog needs</h2>
 <p>Here, you'll find pictures of cute dogs, cute dog name inspiration, and <b>most importantly</b> a table that provides information on my cute pet dogs (including their names and ages)!</p>
-<nav>
-	
-</nav>
+<h2>Checkout my Top 5 Cute Dog Names for 2016:</h2>
+<ol>
+	<li>Babe</li>
+	<li>Donovan</li>
+	<li>Melanie</li>
+	<li>Krispy</li>
+	<li>Whisper</li>
+</ol>
+
 
 </body>
 </html>
