Add name and age table

--- a/dog_name.html
+++ b/dog_name.html
@@ -6,7 +6,24 @@
 <body>
 <h1>Welcome to the Dog Table!</h1>
 <p>Here, you'll find the names and ages of my three pet dogs!</p>
-
+<table border="2">
+	<tr>
+		<th>Dog Name</th>
+		<th>Dog Age</th>
+	</tr>
+	<tr>
+		<td>Sammy</td>
+		<td>4 years</td>
+	</tr>
+	<tr>
+		<td>Lola</td>
+		<td>3 years</td>
+	</tr>
+	<tr>
+		<td>Chip</td>
+		<td>9 years</td>
+	</tr>
+</table>
 
 </body>
 </html>
