Add link to dog table

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 	<li>Melanie</li>
 	<li>Krispy</li>
 	<li>Whisper</li>
-</ol>
+</ol> 
+<nav>
+	<a href="dog_name.html">Click here for the dog table!</a>
+</nav>
 
 
 </body>
