--- a/dog_name.html
+++ b/dog_name.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>Dog Table</title>
 </head>
 <body>
 <h1>Welcome to the Dog Table!</h1>
-<p>Here, you'll find the names and ages of my three pet dogs!</p>
+<p>Here, you'll find the names and ages of my three pet dogs</p>
 <table border="2">
 	<tr>
 		<th>Dog Name</th>
