Add heading border

--- a/dog_name.html
+++ b/dog_name.html
@@ -5,7 +5,7 @@
 	<title>Dog Table</title>
 </head>
 <body>
-<h1>Welcome to the Dog Table!</h1>
+<h1 class="pink">Welcome to the Dog Table!</h1>
 <p>Here, you'll find the names and ages of my three pet dogs</p>
 <table border="2">
 	<tr>
