Add heading border, change font, change link color

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<title>Cute Dogs</title>
 </head>
 <body>
-<h1>Welcome to my Cute Dogs Site!</h1>
-<h2>For all of your cute dog needs</h2>
-<img src="cute_dog.jpg" alt="small white dog">
+<h1 class="pink">Welcome to my Cute Dogs Site!</h1> 
+<p>For all of your cute dog needs</p>
+<img src="cute_dog.jpg" alt="small white dog" id="cute-dog-picture">
 <p>Image Author: Eli Christman</p>
 <p><a href="https://www.flickr.com/photos/gammaman/27587630990/in/photolist-J2PPyb-8oiqjq-bATasW-dX66T5-bkPbyj-dbHKsY-HwhXXz-dX66M9-HwidAd-9YmU7z-9aRtNF-J2PRGu-9CgWsh-3TA9D-9BtV9r-JskVGz-apVxVv-89PL6y-bnmdWh-8qMXP9-8uSq9w-neKtJr-HwiewS-6sBnu5-bcTLSk-e9VHy4-pXu2Pa-4bfpkr-5iC2WD-3eS6VM-JskQit-apYgyS-7MoarF-3s48b1-bnmeL9-9JYTEB-dUwxVB-752GNx-NnRT7-f5fGu5-bpvSmo-dp8PV-Jiqgdm-6w2BtS-JskUKz-zczBNm-bnmexf-5UF4Ut-8GBLVZ-bAg6QK">Image URL here</a></p>
 <p><a href="https://creativecommons.org/licenses/by/2.0/">License URL here</a></p>
 <p>Here, you'll find pictures of cute dogs, cute dog name inspiration, and <b>most importantly</b> a table that provides information on my cute pet dogs (including their names and ages)!</p>
-<h2>Checkout my Top 5 Cute Dog Names for 2016:</h2>
+<h2 class="pink">Checkout my Top 5 Cute Dog Names for 2016:</h2>
 <ol>
 	<li>Babe</li>
 	<li>Donovan</li>
