Add footer message

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <nav>
 	<a href="dog_name.html">Click here for the dog table!</a>
 </nav>
-
+<footer class="footer">
+	<p>Thank you for visiting.</p>
+</footer>
 
 </body>
 </html>
