Add background image to table

--- a/dog_name.html
+++ b/dog_name.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class="pink">Welcome to the Dog Table!</h1>
 <p>Here, you'll find the names and ages of my three pet dogs</p>
-<table border="2">
+<table border="2" id="dog-table">
 	<tr>
 		<th>Dog Name</th>
 		<th>Dog Age</th>
